force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/Apttus_Config2__ConfigSelectConfigProductsSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for product selection pages. The record should be named as &quot;Primary Settings&quot;.</description>
    <label>Config Select Products Settings</label>
</CustomObject>