force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__AlwaysDisplayLeafProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AlwaysDisplayLeafProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Always Display Leaf Products</label>
    <type>Checkbox</type>
</CustomField>