force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__CacheAllProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CacheAllProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cache all products to avoid SOQL queries. Should be enabled when number of product records are small.</description>
    <inlineHelpText>Check to cache all products to avoid extra SOQL queries.</inlineHelpText>
    <label>Cache All Products</label>
    <type>Checkbox</type>
</CustomField>