force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__CarouselCategoryLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CarouselCategoryLevel__c</fullName>
    <description>Maximum Depth allowed to be browsed in the Product Carousel.</description>
    <inlineHelpText>No value will allow infinite browse depth. A value of zero will restrict you to the root level.</inlineHelpText>
    <label>Carousel Category Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>