force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__CarouselDefaultIcon__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CarouselDefaultIcon__c</fullName>
    <description>Default Icon used for the categories in the Carousel.</description>
    <inlineHelpText>Id to attachment</inlineHelpText>
    <label>Carousel Default Icon</label>
    <length>18</length>
    <type>Text</type>
</CustomField>