force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__CartListItemDescriptionField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CartListItemDescriptionField__c</fullName>
    <description>Holds the API field name of the Long Description field to be used in the Cart Detail View page</description>
    <inlineHelpText>Holds the API field name of the Long Description field to be used in the Cart Detail View page</inlineHelpText>
    <label>Cart List Item Description Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>