force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__CustomActionLabelName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomActionLabelName__c</fullName>
    <description>The name of the custom label for the action.</description>
    <inlineHelpText>The name of the custom label for the action.</inlineHelpText>
    <label>Custom Action Label Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>