force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__CustomActionPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomActionPage__c</fullName>
    <description>The name of the custom action page.</description>
    <inlineHelpText>The name of the custom action page.</inlineHelpText>
    <label>Custom Action Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>