force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__DisableAddAnother__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisableAddAnother__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This custom setting removes the user&apos;s ability to add multiple instances of the same product.</description>
    <inlineHelpText>This custom setting removes the user&apos;s ability to add multiple instances of the same product.</inlineHelpText>
    <label>Disable Add Another</label>
    <type>Checkbox</type>
</CustomField>