force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__DisableAddToCartOnClick__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisableAddToCartOnClick__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable &quot;Add To Cart&quot; button on click until the server confirms addition of product.</description>
    <inlineHelpText>Check to disable &quot;Add To Cart&quot; button on click until the server confirms addition of product.</inlineHelpText>
    <label>Disable Add To Cart On Click</label>
    <type>Checkbox</type>
</CustomField>