force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__DisableFavorites__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisableFavorites__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable saving the favorite, favorites category and other favorites related UI items</description>
    <inlineHelpText>Disable saving the favorite, favorites category and other favorites related UI items</inlineHelpText>
    <label>Disable Favorites</label>
    <type>Checkbox</type>
</CustomField>