force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__EnableCategoryFilter__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableCategoryFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Narrow Your Search category filtering during product search.</description>
    <inlineHelpText>Enable Narrow Your Search category filtering during product search.</inlineHelpText>
    <label>Enable Category Filter</label>
    <type>Checkbox</type>
</CustomField>