force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__FavoritesCategoryUploadImage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FavoritesCategoryUploadImage__c</fullName>
    <description>Upload an image for displaying across all Favorites categories</description>
    <inlineHelpText>Upload an image for displaying across all Favorites categories</inlineHelpText>
    <label>Favorites Upload Image</label>
    <type>Url</type>
</CustomField>