force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__FavoritesIconAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FavoritesIconAttachmentId__c</fullName>
    <label>Favorites Icon Attachment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>