force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__HideBreadcrumb__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideBreadcrumb__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the breadcrumb navigation element.</description>
    <inlineHelpText>Hide the breadcrumb navigation element.</inlineHelpText>
    <label>Hide Breadcrumb</label>
    <type>Checkbox</type>
</CustomField>