force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__HideCartHeader__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideCartHeader__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to hide the Cart Header in select pages</description>
    <label>Hide Cart Header</label>
    <type>Checkbox</type>
</CustomField>