force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__HideCompareProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideCompareProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked compare products feature will be hidden from the catalog page.</description>
    <inlineHelpText>Turn this setting on to hide compare products feature in the catalog page.</inlineHelpText>
    <label>Hide Compare Products</label>
    <type>Checkbox</type>
</CustomField>