force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__HideDefaultOptionsInDescription__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideDefaultOptionsInDescription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked default options are listed along with product descriptions.</description>
    <inlineHelpText>When checked default options are not listed below the product description.</inlineHelpText>
    <label>Hide Default Options In Description</label>
    <type>Checkbox</type>
</CustomField>