force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__HideLineItemAttributeDetails__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideLineItemAttributeDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Line item &quot;Details&quot; section on the Product Attribute Detail page</description>
    <inlineHelpText>Hide Line item &quot;Details&quot; section on the Product Attribute Detail page if checked.</inlineHelpText>
    <label>Hide Line Item Attribute Details</label>
    <type>Checkbox</type>
</CustomField>