force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__HideListedProductsPriceColumn__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideListedProductsPriceColumn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to hide the price information column in listed product page.</description>
    <inlineHelpText>Please be careful in hiding this critical price information column.</inlineHelpText>
    <label>Hide Listed Products Price Column</label>
    <type>Checkbox</type>
</CustomField>