force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__HideProductImage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideProductImage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to hide product image.</description>
    <inlineHelpText>Check this to hide product image.</inlineHelpText>
    <label>Hide Product Image</label>
    <type>Checkbox</type>
</CustomField>