force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__HideSingleTopCategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideSingleTopCategory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If it is checked when there is only one top category for a price list and it has child categories, the top category will be hidden.</description>
    <inlineHelpText>Check to hide top category when there is only one top category and it has one or more child categories.</inlineHelpText>
    <label>Hide Single Top Category</label>
    <type>Checkbox</type>
</CustomField>