force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ListedFavoriteConfigurationsColumn2__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ListedFavoriteConfigurationsColumn2__c</fullName>
    <description>API name of the favorite configuration field to be displayed in the list of favorite configurations on catalog page</description>
    <inlineHelpText>API name of the favorite configuration field to be displayed in the list of favorite configurations on catalog page</inlineHelpText>
    <label>Listed Favorite Configurations Column2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>