force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ListedProductsColumn2__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ListedProductsColumn2__c</fullName>
    <description>API name of the product field to be displayed in the listed products section.</description>
    <inlineHelpText>API name of the product field to be displayed in the listed products section. A valid value could be like ProductCode.</inlineHelpText>
    <label>Listed Products Column2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>