force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ListedProductsDefaultIcon__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ListedProductsDefaultIcon__c</fullName>
    <description>Default Product Icon used for the Listed Products.</description>
    <inlineHelpText>Id to attachment</inlineHelpText>
    <label>Listed Products Default Icon</label>
    <length>18</length>
    <type>Text</type>
</CustomField>