force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__MainSectionRatio__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MainSectionRatio__c</fullName>
    <defaultValue>&quot;20:60:20&quot;</defaultValue>
    <description>The ratio of main sections separated by colon. The default value is 20:60:20.</description>
    <inlineHelpText>The ratio of main sections separated by colon. The default value is 20:60:20.</inlineHelpText>
    <label>Main Section Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>