force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ProductCacheFields1__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductCacheFields1__c</fullName>
    <description>List of custom fields required for product cache</description>
    <inlineHelpText>List of custom fields required for product cache</inlineHelpText>
    <label>Product Cache Fields1</label>
    <type>TextArea</type>
</CustomField>