force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ReadOnlyLocation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ReadOnlyLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the location should be displayed as read only field</description>
    <inlineHelpText>Check this to display the location as read only field</inlineHelpText>
    <label>Read Only Location</label>
    <type>Checkbox</type>
</CustomField>