force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__SaveAsFavoriteDialogColumns__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SaveAsFavoriteDialogColumns__c</fullName>
    <description>Columns for save as favorite configuration dialog on cart page</description>
    <inlineHelpText>Enter comma separated API names of the columns of favorite configuration object for save as favorite configuration dialog on cart page</inlineHelpText>
    <label>Save as Favorite Dialog Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>