force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__SearchQueryLimit__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SearchQueryLimit__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Limit applied to product search results.</description>
    <inlineHelpText>For faster product search use smaller number. Default is 1000.</inlineHelpText>
    <label>Search Query Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>