force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__SelectedProductsColumn4__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SelectedProductsColumn4__c</fullName>
    <description>API name of the line item field in the selected products section. A valid value could be like ProductId__r.ProductCode</description>
    <inlineHelpText>API name of the line item field in the selected products section. A valid value could be like ProductId__r.ProductCode</inlineHelpText>
    <label>Selected Products Column4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>