force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ShowCartIcon__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowCartIcon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows the cart as icon and hides the cart sidebar on the right hand side</description>
    <inlineHelpText>Shows the cart as icon and hides the cart sidebar on the right hand side</inlineHelpText>
    <label>Minimize Cart</label>
    <type>Checkbox</type>
</CustomField>