force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ShowFavoriteAsFirstCategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowFavoriteAsFirstCategory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked favorites category will be shown on top in list of product categories.</description>
    <label>Show Favorite as First Category</label>
    <type>Checkbox</type>
</CustomField>