force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ShowProductIconCartDetailView__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowProductIconCartDetailView__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the product icon on each line item in  the Cart Detail View page (Note: this will disable the action item columns and show the actions underneath the product icon)</description>
    <inlineHelpText>Show the product icon on each line item in  the Cart Detail View page (Note: this will disable the action item columns and show the actions underneath the product icon)</inlineHelpText>
    <label>Show Product Icon Cart Detail View</label>
    <type>Checkbox</type>
</CustomField>