force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ShowQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowQuantity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to show quantity input field. When a product is added to cart quantity entered in this field is used as line item quantity.</description>
    <inlineHelpText>Check this to show quantity input field for add to cart action.</inlineHelpText>
    <label>Show Quantity Input</label>
    <type>Checkbox</type>
</CustomField>