force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ShowRecommendedProductsCartView__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowRecommendedProductsCartView__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the recommended products component in the Cart Detail View page</description>
    <inlineHelpText>Show the recommended products component in the Cart Detail View page</inlineHelpText>
    <label>Show Recommended Products Cart View</label>
    <type>Checkbox</type>
</CustomField>