force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ShowSelectedProductAllCharges__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowSelectedProductAllCharges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>specifies if all charge types should be displayed for the selected products in the tree view options page.</description>
    <inlineHelpText>specifies if all charge types should be displayed for the selected products in the tree view options page.</inlineHelpText>
    <label>Show Selected Product All Charges</label>
    <type>Checkbox</type>
</CustomField>