force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__ShowSelectedProductsInConfigOptions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowSelectedProductsInConfigOptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows the Selected Products widget in the Config Options Detail View page</description>
    <inlineHelpText>Shows the Selected Products widget in the Config Options Detail View page</inlineHelpText>
    <label>Show Selected Products in Config Options</label>
    <type>Checkbox</type>
</CustomField>